Fix overflow 367p

--- a/CSS/scss/_MediaQuery367p.scss
+++ b/CSS/scss/_MediaQuery367p.scss
@@ -72,11 +72,11 @@ ul, li {
   margin-top: -566px;
   padding: 150px 100px;
   width: auto;
-  height: 440px;
+  height: fit-content;
 }
 
 #Mision p {
-font-size: 10px;
+font-size: 9px;
 
 }
 
